ensure all text is pretty wrapped

--- a/app/assets/stylesheets/hera/base.scss
+++ b/app/assets/stylesheets/hera/base.scss
@@ -16,6 +16,7 @@ body {
   background-color: $white;
   display: grid;
   font-family: 'ProximaNovaLight', 'system-ui';
+  text-wrap: pretty;
 }
 
 a {
